<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/transitionAboutPager"
    tools:background="@color/white"
    tools:theme="@style/Theme.StockPrice">

    <TextView
        android:id="@+id/textViewCompanyTicker"
        style="@style/textViewH2"
        android:layout_width="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="AAPL" />

    <TextView
        android:id="@+id/textViewCompanyName"
        style="@style/textViewBodyConstrainedWidth"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="4dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCompanyTicker"
        tools:text="Apple Inc." />

    <ImageView
        android:id="@+id/imageViewBack"
        style="@style/clickableImage"
        android:layout_marginStart="9dp"
        android:contentDescription="@string/descriptionBack"
        android:src="@drawable/outline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/textViewCompanyName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewCompanyTicker" />

    <ImageView
        android:id="@+id/imageViewStar"
        style="@style/clickableImage"
        android:layout_marginEnd="9dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/textViewCompanyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewCompanyTicker"
        tools:ignore="ContentDescription" />

    <com.ferelin.core.ui.view.custom.tabs.CustomTabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCompanyName" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>