...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewProfile"
                app:layout_constraintTop_toTopOf="parent"
                app:orderNumber="1" />

            <com.ferelin.stockprice.custom.OrderedTextView
                android:id="@+id/textViewNews"
                style="@style/textViewBodyShadowedTab"
                android:text="@string/titleNews"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewChart"
                app:layout_constraintTop_toTopOf="parent"
                app:orderNumber="2" />
...
